--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,9 +3,9 @@
     <hr>
 </div>
 
-<div class="app mt-2 ml-5 mr-5">
+<div class="app ml-5 mr-5 pt-0">
     <div class="row">
-        <app-tree class="ml-2 col-4" [directory] = "directory"></app-tree>
-        <app-panel class="col-6"></app-panel>
+        <app-tree class="ml-2 col-5 mt-5" [directory] = "directory"></app-tree>
+        <app-panel class="col-6" ></app-panel>
     </div>
 </div>
